# order-service

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: cloud-run.yml
.sqlx/: query-104818b988e15605f7b13a714a6142f7208cfa339b3a1b069c816fc81d18c970.json  query-581a41fc69e2252218f0801571d3d471f5f9bef29f454becf731f028729105d9.json  query-6da4e7ef13348ceaad10b080e4d4c154b673c94f1967eda5cab446ff0f21ba2c.json  query-82bcf09770eeb2db1df63e5f10e7e90e2eef7e04d48e682e8c3af1b9497aec4e.json  query-ab2f4be6269e7106e63f47c134044beef761a1a668c4ee929089b5389c4e69b5.json  query-c77b78efdc891cb4b39f64e1f4b6a17930e83ab5c33242282948588a40c09b61.json  query-e7a85847e5ba8fde2213d55dcc943efeb03f702c0962910aedc25e2d52b39159.json  query-ea973f41d2c4d94a15baee4accf587b65a2ca4fea4ccdf5258dc7db8202bb171.json
migrations/: 20240423070318_order.down.sql  20240423070318_order.up.sql  20240525172002_order.up.sql
proto/: services.proto
src/: guard.rs  main.rs  typing.rs
src/model/: order.rs
src/repository/: order.rs
src/routes/: order.rs
