[package]
name = "heymart-c14-payment"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "tls-rustls",
    "chrono",
] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rocket_cors = "0.6.0"
tonic = { version = "^0.7", features = [
    "transport",
    "tls",
    "tls-roots",
    "tls-webpki-roots",
] }
prost = "0.10"
tokio-stream = "0.1"
sqlx-db-tester = "0.4.2"
autometrics = { version = "1.0.1", features = ["prometheus-exporter"] }
http = "1.1.0"

[build-dependencies]
tonic-build = "0.7"
